tinyc/test/good/assign-with-use-compound2.c
int main()
{
    unsigned x = 10;
    x *= x + 1;
    assert( x == 110 );
    return 0;
}
