tinyc/test/bad/assign-to-const.c
int main()
{
    const int x;
    x = 1;

    return 0;
}
